<resources>
    <string name="app_name" translatable="false">CONAN</string>
    <string name="version">Version %1$s</string>
    <string name="error">Error</string>
    <string name="terms_and_conditions_tittle">Terms and Conditions </string>
    <string name="terms_and_conditions_content">To continue with the CONAN Mobile application you must accept the legal <a href="#">terms and conditions.</a> </string>
    <string name="terms_and_conditions_reject">Exit the app</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet_tittle">You have no connection</string>
    <string name="no_internet_content">You need internet connection to use CONAN Mobile. Please check your internet connection and try again later.</string>
    <string name="no_internet_understood">Understood</string>
    <string name="settings">Settings</string>
    <string name="analysis_type">Available Analysis</string>
    <string name="help">Help</string>
    <string name="check_last_analysis">Check your last analysis</string>
    <string name="full_analysis">Full analysis</string>
    <string name="application_analysis">Application analysis</string>
    <string name="analyzing_device">Analyzing device</string>
    <string name="default_analysis_title">Choose the analysis you would like to start with</string>
    <string name="default_analysis_description">The application will open with the analysis you select as the default</string>
    <string name="no_configuration_title">Configuration not available</string>
    <string name="no_configuration_text">Configuration not available. Please close the app.</string>
    <string name="incidences_detected">We have detected some issues</string>
    <string name="apps">Apps</string>
    <string name="permissions">Permissions</string>
    <string name="advices">Advices</string>
    <string name="incidences">Incidences</string>
    <string name="review">Review</string>
    <string name="critical">Critical</string>
    <string name="attention_required">Attention required</string>
    <string name="everything_ok">Everything is ok!</string>
    <string name="device_config">Device configuration</string>
    <string name="analyzed_apps">Analyzed apps:</string>
    <string name="check_app_permissions">Check your apps permissions according to:</string>
    <string name="permission_type">Permission type</string>
    <string name="risk_level">Risk level</string>
    <string name="results">Results</string>
    <string name="analyze_device">Analyze device</string>
    <string name="analysis_launched">Analyzing device...</string>
    <string name="common_yes">Yes</string>
    <string name="common_not">Not</string>
    <string name="warning_running_analysis_title">Analysis in progress</string>
    <string name="warning_running_analysis_message">You have an analysis running now, you want to abandon that process</string>
    <string name="warning_no_analysis_available_yet_title">Analysis not available</string>
    <string name="warning_no_analysis_available_yet_message">You cannot perform further analysis until within %s</string>
    <string name="warning_no_analysis_available_yet_message_seconds">You cannot perform further analysis until within few seconds</string>
    <string name="warning_no_analysis_is_running_message">There is currently an analysis running</string>
    <string name="warning_permissions_needed_title">Permissions denied</string>
    <string name="warning_permissions_needed_message">Phone permissions are needed for the app to work properly.</string>
    <string name="description">Description</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutos</string>
    <string name="gps_disabled_title">GPS Disabled</string>
    <string name="gps_disabled_message">GPS is currently disabled, some analysis will not run, do you want to activate GPS Navigation Now?</string>
    <string name="label_apps_not_installed">Application is not installed</string>
    <string name="analysis_connection_lost_text">Due to a loss of connection, the analysis will not be able to be completed. Please reestablish the internet connection.</string>
    <string name="analysis_connection_lost_tittle">Lost connection</string>
    <string name="no_pdf_found_title">No document found</string>
    <string name="no_pdf_found_message">Sorry, unable to open help document</string>

    <!-- DetailFragment -->
    <string name="label_subtitle_insecue_network">Open Wifi:</string>
    <string name="label_subtitle_notification_access">Apps with access to notifications:</string>
    <string name="warnings_error">Warnings list could not be loaded. Try again later</string>
    <string name="osi_error">OSI tips list could not be loaded. Try again later</string>
    <string name="warnings">Warnings</string>
    <string name="importance_high">High importance</string>
    <string name="importance_medium">Medium importance</string>
    <string name="importance_low">Low importance</string>
    <string name="open_wifis">Open Wifi:</string>
    <string name="clase_button_legal">Close</string>
    <string name="osi_tips">OSI Advices</string>
    <string name="system">System</string>
    <string name="origin_not_found">Origin not found</string>
    <string name="menu">Menu</string>
    <string name="no_warnings">There\'s no warnings</string>
    <string name="analysis_message">You are going to throw the analysis %1$s</string>
    <string name="analysis_not_available">Analysis not available</string>
    <string name="notification_channel_id" translatable="false">incibe_conan_mobile</string>
    <string name="recommended_analysis">It is recommended to analysis your device again.</string>
    <string name="finished_analysis_notification_message">The analysis of your device is finished</string>
    <string name="analysis_title">Analysis</string>
    <string name="developer_settings_alert">Turn off this feature on developer settings.</string>
    <string name="settings_alert">Turn off this feature from settings.</string>
    <string name="safetynet_not_enabled">The module 104 - SafetyNet verification is not enabled</string>
    <string name="app_not_into_safetynet">This application is not into SafetyNet harmful list</string>

    <!-- OsiFragment -->
    <string name="label_link_osi"><a href="http://www.osi.es">www.osi.es</a></string>
    <string name="permissions_subtitle">Esta aplicación ha sido marcada como de riesgo alto debido a que tiene acceso a los siguientes permisos de sistema:</string>

    <!-- Accessibility -->
    <string name="logo_conan_alt">Logo</string>
    <string name="logo_incibe_alt">logo incibe</string>
    <string name="terms_and_conditions_icon_alt">Term and conditions icon</string>
    <string name="internet_icon_alt">Internet icon</string>
    <string name="right_arrow_icon_alt">Right arrow icon</string>
    <string name="left_arrow_icon_alt">Left arrow icon</string>
    <string name="advices_icon_alt">Advices icon</string>
    <string name="whatsapp_icon_alt">Whatsapp icon</string>
    <string name="settings_analysis_icon_alt">Settings icon</string>
    <string name="settings_dot_icon_alt">Settings incidences icon</string>
    <string name="apps_analysis_icon_alt">Apps icon</string>
    <string name="apps_dot_icon_alt">Apps incidences icon</string>
    <string name="permissions_analysis_icon_alt">Permissions analysis icon</string>
    <string name="permissions_dot_icon_alt">Permissions incidences icon</string>
    <string name="analysis_icon_alt">Analysis results icon</string>
    <string name="analysis_ok_icon_alt">Analysis OK icon</string>
    <string name="play_analysis_icon_alt">Play analysis icon</string>
    <string name="call_icon_alt">Call 017 icon</string>
    <string name="telegram_icon_alt">Telegram icon</string>
    <string name="notification_icon_alt">Notifications icon</string>
    <string name="attention_icon_alt">Attention icon</string>
    <string name="dialog_icon_alt">Alert icon</string>
    <string name="close_icon_alt">Close icon</string>

</resources>
