<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.splash.SplashActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splash_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="@color/black"
        android:visibility="gone">

        <ImageView
            android:id="@+id/conan_logo_iv"
            android:layout_width="@dimen/conan_splash_width"
            android:layout_height="@dimen/conan_splash_height"
            android:layout_marginTop="@dimen/conan_splash_margin_top"
            android:contentDescription="@string/logo_conan_alt"
            android:src="@drawable/logo_conan_mobile_big_test"
            app:layout_constraintBottom_toTopOf="@id/incibe_logo_iv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/incibe_logo_iv"
            android:layout_width="@dimen/incibe_splash_width"
            android:layout_height="@dimen/incibe_splash_height"
            android:layout_marginBottom="@dimen/incibe_splash_margin_bottom"
            android:contentDescription="@string/logo_incibe_alt"
            android:src="@drawable/logo_incibe_test"
            app:layout_constraintBottom_toTopOf="@+id/version_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/conan_logo_iv" />

        <TextView
            android:id="@+id/version_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_size_20"
            android:layout_marginTop="@dimen/conan_splash_margin_top"
            android:layout_marginBottom="@dimen/version_splash_margin_bottom"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/version"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/terms_cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/landscape_size_20"
        android:layout_marginEnd="@dimen/landscape_size_20"
        app:cardCornerRadius="@dimen/splash_Card_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.splash.fragments.TermsAndConditionsFragment">

            <ImageView
                android:id="@+id/documents_iv"
                android:layout_width="@dimen/splash_icon_size"
                android:layout_height="@dimen/splash_icon_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_default_large"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_documents"
                app:layout_constraintBottom_toTopOf="@id/tittle_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="@string/logo_conan_alt" />

            <TextView
                android:id="@+id/tittle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_terms"
                android:text="@string/terms_and_conditions_tittle"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/text_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/documents_iv"
                android:contentDescription="@string/terms_and_conditions_icon_alt" />

            <TextView
                android:id="@+id/text_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_tv_conditions"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/splash_margin_tv"
                android:layout_marginEnd="@dimen/splash_margin_tv"
                android:layout_marginBottom="@dimen/splash_margin_tv_bottom"
                android:gravity="center_horizontal"
                android:text="@string/terms_and_conditions_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_17"
                app:layout_constraintBottom_toTopOf="@id/reject_tv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tittle_tv" />

            <TextView
                android:id="@+id/reject_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/splash_margin_horizontal_options"
                android:layout_marginBottom="@dimen/splash_margin_top_options"
                android:text="@string/terms_and_conditions_reject"
                android:textColor="@color/red_orange"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/accept_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/splash_margin_horizontal_options"
                android:layout_marginBottom="@dimen/splash_margin_top_options"
                android:text="@string/accept"
                android:textColor="@color/splash_accept_color"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/no_internet_cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/splash_card_margin_horizontal"
        android:layout_marginTop="@dimen/splash_card_margin_top"
        android:layout_marginEnd="@dimen/splash_card_margin_horizontal"
        android:layout_marginBottom="@dimen/splash_card_margin_bottom"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/splash_Card_radius"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.splash.fragments.TermsAndConditionsFragment">

            <ImageView
                android:id="@+id/internet_iv"
                android:layout_width="@dimen/splash_icon_size"
                android:layout_height="@dimen/splash_icon_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_default_large"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/no_connection_tittle_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_connection_fail"
                android:contentDescription="@string/internet_icon_alt"/>

            <TextView
                android:id="@+id/no_connection_tittle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/splash_title_margin_top"
                android:text="@string/no_internet_tittle"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/no_connection_text_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/internet_iv" />

            <TextView
                android:id="@+id/no_connection_text_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/splash_description_tv_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/splash_margin_tv"
                android:layout_marginEnd="@dimen/splash_margin_tv"
                android:layout_marginBottom="@dimen/splash_text_margin_bottom"
                android:gravity="center_horizontal"
                android:text="@string/no_internet_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_17"
                app:layout_constraintBottom_toTopOf="@id/understood_tv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/no_connection_tittle_tv" />

            <TextView
                android:id="@+id/understood_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/splash_margin_top_options"
                android:text="@string/no_internet_understood"
                android:textColor="@color/splash_accept_color"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/no_configuration_cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/splash_card_margin_horizontal"
        android:layout_marginTop="@dimen/splash_card_margin_top_huge"
        android:layout_marginEnd="@dimen/splash_card_margin_horizontal"
        android:layout_marginBottom="@dimen/splash_card_margin_bottom"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/splash_Card_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.splash.fragments.TermsAndConditionsFragment">

            <TextView
                android:id="@+id/no_config_tittle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/splash_title_margin_top"
                android:text="@string/no_configuration_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/no_configuration_text_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/no_configuration_text_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/splash_configuration_text_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/splash_margin_tv"
                android:layout_marginEnd="@dimen/splash_margin_tv"
                android:layout_marginBottom="@dimen/margin_default"
                android:gravity="center_horizontal"
                android:text="@string/no_configuration_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_17"
                app:layout_constraintBottom_toTopOf="@id/no_configuraion_accept_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/no_config_tittle_tv" />

            <TextView
                android:id="@+id/no_configuraion_accept_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/splash_margin_top_options"
                android:text="@string/terms_and_conditions_reject"
                android:textColor="@color/red_orange"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/no_configuration_text_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>